fix(tasteeFile) : when a tastee file (html) is empty, the editor has a wrong height

--- a/src/app/components/content/wysiwyg/wysiwyg.component.scss
+++ b/src/app/components/content/wysiwyg/wysiwyg.component.scss
@@ -1,13 +1,13 @@
 #editparent {
-    display: flex;
-    flex-direction: row;
-    overflow:auto;
+  display: flex;
+  flex-direction: row;
+  overflow:auto;
+  height:100%;
 }
 
 #editor {
     border:1px solid silver;
     border-radius:5px;
-    min-height:100px;
     box-shadow: inset 0 0 10px silver;
     padding:1em;
     background: white;
